fix modal jump

--- a/src/css/basic.css
+++ b/src/css/basic.css
@@ -215,7 +215,7 @@ body {
   z-index: 1;
   opacity: 1;
   pointer-events: all;
-  overflow: hidden;
+  /*overflow: hidden;*/
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   display: flex;
